--- a/views/teacher_evaluation.ejs
+++ b/views/teacher_evaluation.ejs
@@ -102,11 +102,11 @@
             <label><i class="fas fa-chart-line"></i> المستوى الأكاديمي الحالي:</label>
             <select name="level" required>
                 <option value="" disabled selected>اختر المستوى...</option>
-                <option value="Excellent">ممتاز (Excellent)</option>
-                <option value="Very Good">جيد جداً (Very Good)</option>
-                <option value="Good">جيد (Good)</option>
-                <option value="Medium">متوسط (Medium)</option>
-                <option value="Weak">ضعيف (Weak)</option>
+                <option value="ممتاز">ممتاز </option>
+                <option value=" جيد جداً ">جيد جداً </option>
+                <option value="جيد">جيد </option>
+                <option value="متوسط">متوسط </option>
+                <option value="ضعيف">ضعيف </option>
             </select>
 
             <label><i class="fas fa-comment-dots"></i> ملاحظات تربوية وتوصيات:</label>
